LPS-161532 search-experiences-service:add javax.ws.rs-api in build.gradle for testCompile
https://issues.liferay.com/browse/LPS-161532

--- a/modules/dxp/apps/search-experiences/search-experiences-service/build.gradle
+++ b/modules/dxp/apps/search-experiences/search-experiences-service/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 	testCompile group: "com.fasterxml.jackson.core", name: "jackson-annotations", version: "2.13.2"
 	testCompile group: "com.fasterxml.jackson.core", name: "jackson-core", version: "2.13.2"
 	testCompile group: "com.fasterxml.jackson.core", name: "jackson-databind", version: "2.13.2.2"
+	testCompile group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.1"
 	testCompile project(":apps:portal-search:portal-search")
 	testCompile project(":apps:users-admin:users-admin-test-util")
 }
